--- a/webui/Cargo.toml
+++ b/webui/Cargo.toml
@@ -9,6 +9,7 @@ rocket_codegen = "0.2.6"
 serde = "0.9"
 serde_json = "0.9"
 serde_derive = "0.9"
+rusqlite = "0.11.0"
 
 [dependencies.rocket_contrib]
 version = "0.2.6"
