--- a/webui/Cargo.toml
+++ b/webui/Cargo.toml
@@ -10,6 +10,7 @@ serde = "0.9"
 serde_json = "0.9"
 serde_derive = "0.9"
 rusqlite = "0.11.0"
+serial = "0.3"
 
 [dependencies.rocket_contrib]
 version = "0.2.6"
